--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "gussware/client-http",
     "description": "Librería basica para realizar peticiones http mediente curl",
     "type": "library",
+    "version": "0.1.0",
     "autoload": {
         "psr-4": {
             "Gussware\\ClientHttp\\": "src/"
