--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
     "name": "gussware/client-http",
     "description": "Librería basica para realizar peticiones http mediente curl",
     "type": "library",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Gussware\\ClientHttp\\": "src/"
+            "Gussware": "src/"
         }
     },
     "authors": [
